Trang home đã có tí màu sắc

--- a/app/src/main/res/layout/activity_main_item.xml
+++ b/app/src/main/res/layout/activity_main_item.xml
@@ -2,26 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/border"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvItemNameK"
-        android:layout_width="68dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="12dp"
-        android:text="Tên sách "
-        app:layout_constraintEnd_toStartOf="@+id/tvItemNameV"
-        app:layout_constraintStart_toEndOf="@+id/ivItemCoverImage"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/ivItemCoverImage"
-        android:layout_width="161dp"
-        android:layout_height="147dp"
-        android:layout_marginBottom="584dp"
+        android:layout_width="154dp"
+        android:layout_height="205dp"
+        android:layout_marginStart="4dp"
+        android:contentDescription="@string/main_item_book_cover_description"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,85 +20,80 @@
 
     <TextView
         android:id="@+id/tvItemNameV"
-        android:layout_width="144dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="6dp"
-        android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/tvItemReleaseDateV"
+        android:layout_width="218dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="end"
+        android:fontFamily="monospace"
+        android:maxLines="2"
+        android:text="@string/test_lorem_length"
+        android:textAlignment="textStart"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/ivItemCoverImage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvItemReleaseDateK"
-        android:layout_width="54dp"
-        android:layout_height="19dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="26dp"
-        android:text="Ngày xuất bản "
+        android:layout_width="88dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="0dp"
+        android:text="@string/main_item_book_release_date_key"
         app:layout_constraintEnd_toStartOf="@+id/tvItemReleaseDateV"
         app:layout_constraintStart_toEndOf="@+id/ivItemCoverImage"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemNameK" />
+        app:layout_constraintTop_toBottomOf="@id/tvItemNameV" />
 
     <TextView
         android:id="@+id/tvItemReleaseDateV"
-        android:layout_width="143dp"
-        android:layout_height="27dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="9dp"
+        android:layout_width="116dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="8dp"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/tvItemAuthorV"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvItemReleaseDateK"
         app:layout_constraintTop_toBottomOf="@+id/tvItemNameV" />
 
     <TextView
         android:id="@+id/tvItemAuthorK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="23dp"
-        android:text="Tác giả"
+        android:layout_width="53dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/main_item_book_author_key"
         app:layout_constraintEnd_toStartOf="@+id/tvItemAuthorV"
         app:layout_constraintStart_toEndOf="@+id/ivItemCoverImage"
         app:layout_constraintTop_toBottomOf="@+id/tvItemReleaseDateK" />
 
     <TextView
         android:id="@+id/tvItemAuthorV"
-        android:layout_width="139dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="13dp"
+        android:layout_width="125dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="13dp"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/tvItemRatingV"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvItemAuthorK"
         app:layout_constraintTop_toBottomOf="@+id/tvItemReleaseDateV" />
 
     <TextView
-        android:id="@+id/tvItemRatingK"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="22dp"
-        android:text="Bình chọn "
-        app:layout_constraintEnd_toStartOf="@+id/tvItemRatingV"
+        android:id="@+id/tvItemCategories"
+        android:layout_width="215dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="17dp"
+        android:maxLines="2"
+        android:text=""
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivItemCoverImage"
         app:layout_constraintTop_toBottomOf="@+id/tvItemAuthorK" />
 
-    <TextView
-        android:id="@+id/tvItemRatingV"
-        android:layout_width="140dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="580dp"
-        android:text=""
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvItemAuthorV" />
 </androidx.constraintlayout.widget.ConstraintLayout>
