--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,13 +6,12 @@
     <color name="light_gray">#F0F0F0</color>
     <color name="dark_gray">#404040</color>
     <color name="primary">#00BCD4</color>
-    <color name="primary_dark">#009688</color>
     <color name="accent">#FF4081</color>
-    <color name="secondary">#2196F3</color>
-    <color name="error">#F44336</color>
-    <color name="warning">#FFEB3B</color>
-    <color name="success">#4CAF50</color>
-    <color name="info">#2196F3</color>
+    <color name="red">#F44336</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="yellow_dark">#F0817105</color>
+    <color name="green">#4CAF50</color>
+    <color name="blue">#2196F3</color>
     <color name="divider">#BDBDBD</color>
     <color name="text_color">#212121</color>
     <color name="background_color">#F5F5F5</color>
