--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -131,6 +131,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="9dp"
         android:layout_marginEnd="15dp"
+        android:isIndicator="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
         app:layout_constraintTop_toBottomOf="@+id/rvBookDetailCategories" />
