--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -25,16 +25,16 @@
 
     <ImageView
         android:id="@+id/ivBookDetailCover"
-        android:layout_width="131dp"
-        android:layout_height="183dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="4dp"
+        android:layout_width="133dp"
+        android:layout_height="212dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionK"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.727"
-        app:srcCompat="@android:drawable/dialog_frame"
-        android:contentDescription="@string/app_name" />
+        app:srcCompat="@android:drawable/dialog_frame" />
 
     <TextView
         android:id="@+id/tvBookDetailAuthorK"
@@ -62,26 +62,29 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBookDetailCategories"
-        android:layout_width="235dp"
-        android:layout_height="26dp"
+        android:layout_width="234dp"
+        android:layout_height="41dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="17dp"
         android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
         app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthorK" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBookDetailChapterList"
-        android:layout_width="379dp"
-        android:layout_height="392dp"
+        android:layout_width="369dp"
+        android:layout_height="300dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -90,10 +93,10 @@
         android:layout_height="59dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="18dp"
+        android:maxLines="4"
         android:text="@string/test_lorem_long"
         android:textSize="12sp"
-        android:maxLines="4"
         app:layout_constraintBottom_toTopOf="@+id/tvBookDetailChapterListK"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -127,13 +130,39 @@
     <RatingBar
         android:id="@+id/rbBookDetailRating"
         android:layout_width="245dp"
-        android:layout_height="52dp"
+        android:layout_height="46dp"
         android:layout_marginStart="18dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="15dp"
         android:isIndicator="true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
         app:layout_constraintTop_toBottomOf="@+id/rvBookDetailCategories" />
+
+    <Button
+        android:id="@+id/btnBookDetailReadFirst"
+        android:layout_width="120dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="25dp"
+        android:text="@string/btn_read_first"
+        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rbBookDetailRating"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btnBookDetailReadLast"
+        android:layout_width="120dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/btn_read_last"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnBookDetailReadFirst"
+        app:layout_constraintTop_toBottomOf="@+id/rbBookDetailRating" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
