--- a/app/src/main/res/layout/activity_book_detail_chapter_list_item.xml
+++ b/app/src/main/res/layout/activity_book_detail_chapter_list_item.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:padding="3dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvBookDetailChapterTitle"
         android:layout_width="85dp"
-        android:layout_height="23dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="122dp"
         android:layout_marginBottom="1dp"
         android:fontFamily="@font/be_vietnam_medium"
         android:maxLines="1"
         android:text="@string/test_lorem_short"
-        android:textColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvBookDetailChapterUpdatedAtK"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +22,7 @@
     <TextView
         android:id="@+id/tvBookDetailChapterUpdatedAtK"
         android:layout_width="97dp"
-        android:layout_height="23dp"
+        android:layout_height="30dp"
         android:layout_marginStart="122dp"
         android:fontFamily="@font/be_vietnam_light"
         android:text="@string/update_at_prefix"
@@ -34,7 +33,7 @@
     <TextView
         android:id="@+id/tvBookDetailChapterUpdatedAtV"
         android:layout_width="108dp"
-        android:layout_height="23dp"
+        android:layout_height="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvBookDetailChapterUpdatedAtK"
         app:layout_constraintTop_toTopOf="parent" />
