--- a/app/src/main/res/layout/activity_chapter_reader.xml
+++ b/app/src/main/res/layout/activity_chapter_reader.xml
@@ -6,4 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".activities.ChapterReaderActivity">
 
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        layout="@layout/activity_chapter_reader_header" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvChapterReaderImage"
+        android:layout_width="match_parent"
+        android:layout_height="670dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
