--- a/app/src/main/res/layout/activity_main_book_item.xml
+++ b/app/src/main/res/layout/activity_main_book_item.xml
@@ -43,7 +43,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="0dp"
-        android:text="@string/update_at_key"
+        android:text="@string/update_at_prefix"
         app:layout_constraintEnd_toStartOf="@+id/tvMainBookItemUpdatedAtV"
         app:layout_constraintStart_toEndOf="@+id/ivMainBookItemCoverImage"
         app:layout_constraintTop_toBottomOf="@id/tvMainBookItemNameV" />
