--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="transparent">#80000000</color>
     <color name="light_gray">#F0F0F0</color>
     <color name="dark_gray">#404040</color>
     <color name="primary">#00BCD4</color>
@@ -12,8 +13,7 @@
     <color name="yellow_dark">#F0817105</color>
     <color name="green">#4CAF50</color>
     <color name="blue">#2196F3</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="divider">#04C6D8</color>
     <color name="text_color">#212121</color>
-    <color name="background_color">#F5F5F5</color>
-    <color name="transparent">#00000000</color>
+    <color name="background_color">#FFFFFF</color>
 </resources>
